--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@formkit/themes": "^1.1.0",
     "@formkit/vue": "^1.1.0",
+    "firebase": "^10.4.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
@@ -26,6 +27,7 @@
     "postcss": "^8.4.25",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-animated": "^1.0.1",
     "vite": "^4.3.9"
   }
 }
