--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@formkit/themes": "^1.1.0",
     "@formkit/vue": "^1.1.0",
+    "date-fns": "^2.30.0",
     "firebase": "^10.4.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
